--- a/W8D3/css-friends-03/skeleton/03-layout.html
+++ b/W8D3/css-friends-03/skeleton/03-layout.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>App Academy Friends | PHASE 2: Notifications</title>
@@ -9,6 +10,7 @@
   <link rel="stylesheet" href="css/02-notifications.css" type="text/css">
   <link rel="stylesheet" href="css/03-layout.css" type="text/css">
 </head>
+
 <body>
 
   <header class="header">
@@ -30,9 +32,17 @@
         <li><a href="#">Profile</a></li>
         <li><a href="#">Settings</a></li>
       </ul>
-
     </nav>
   </header>
+  
+  <div class="content">
+    <div class="content-sidebar">
 
+    </div>
+    <div class="content-main">
+
+    </div>
+  </div>
 </body>
+
 </html>
