finished header h1 and button

--- a/W8D5/css_friends_5/05-cats.html
+++ b/W8D5/css_friends_5/05-cats.html
@@ -35,8 +35,12 @@
 
     </nav>
   </header>
-
   <main class="content">
+    <div class="content-header">
+      <h1>Sennacy The Great</h1>
+      <button>Add Friend</button>
+    </div>
+
     <section class="content-sidebar">
 
     </section>
