--- a/W9D1/css-friends-07/skeleton/07-online.html
+++ b/W9D1/css-friends-07/skeleton/07-online.html
@@ -48,6 +48,7 @@
     <section class="content-sidebar">
 
       <a href="#" class="profile-picture">
+        <span class="online">ONLINE</span>
         <img src="./images/cat.jpg" alt="">
       </a>
 
