finished W9D1 inheritance practice

--- a/W9D1/css-friends-08/skeleton/08-thumbs.html
+++ b/W9D1/css-friends-08/skeleton/08-thumbs.html
@@ -67,6 +67,14 @@
         <li><a href="#">Photos</a></li>
       </ul>
 
+      <ul class="profile-grid">
+        <ul>
+          <a href="#" class="thumb">
+            <img src="./images/cat.jpg" alt="" title="Tommy">
+          </a>
+        </ul>
+      </ul>
+
     </section>
     <section class="content-main">
 
